--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         <p class="summary">
           Senior economist and consumer credit expert with 14 years of Federal Reserve experience
           specializing in consumer finance, machine learning applications in credit underwriting, and
-          advanced techniques in data analysis. Co-founder of the Center for the Restoration of Economic
-          Data (CREED). Author of 25+ research papers on consumer credit markets, financial inclusion,
+          advanced techniques in data analysis. Co-founder of the <a href="https://www.philadelphiafed.org/consumer-finance/creed" target="_blank" style="color: rgba(255,255,255,0.95); text-decoration: underline;"> 
+          Center for the Restoration of Economic Data (CREED)</a>. Author of 25+ research papers on consumer credit markets, financial inclusion,
           and fairness in algorithmic lending.
         </p>
         <ul class="research-interests">
@@ -171,7 +171,7 @@
   <div class="container">
     <h2>CREED</h2>
     <div class="creed-card">
-      <h3>Center for the Restoration of Economic Data</h3>
+      <h3><a href="https://www.philadelphiafed.org/consumer-finance/creed" target="_blank" style="color: #1e6c93;">Center for the Restoration of Economic Data</a></h3>
       <p>
         CREED is a Federal Reserve Bank of Philadelphia initiative I co-founded that transforms
         historical paper archives into research-ready datasets using OCR, digitization, and AI/ML
@@ -597,4 +597,5 @@
 </body>
 
 </html>
+
 
