--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
   </div>
 </section>
   
-<!-- AI-ASSISTED RESEARCH -->
+<!-- AI-ASSISTED ORIGINAL RESEARCH & AI-GENERATED SUMMARIES-->
 <section id="ai-research">
   <div class="container">
     <h2>AI-Assisted Research</h2>
@@ -437,15 +437,19 @@
 
     <!-- PROJECT 1 — replace with your actual content -->
     <div class="ai-card">
-      <h4>Your Paper Title Here <span class="ai-badge">Claude Opus 4</span></h4>
+      <h4>Artificial Intelligence and the Functional Distribution of Income <span class="ai-badge">Claude Opus 4.6</span></h4>
       <div class="ai-meta">2025 · Directed by Larry Santucci</div>
       <p>
-        Brief description of what the paper covers — a sentence or two explaining the research 
-        question and key findings.
+      In a general equilibrium model of AI automation with occupational sorting, we find that unskilled
+        workers benefit from AI across the entire plausible parameter range (through cheaper professional services),
+        AI capability improvements without falling deployment costs are macroeconomically neutral, and that
+        automation reduces the labor share only under joint restrictions on both AI-skill substitutability and 
+        consumer demand elasticity — a result that is considerably more nuanced than the prevailing view
+        that automation necessarily shifts income from workers to capital owners.
       </p>
       <div class="ai-buttons">
-        <a href="ai-research/your-paper-filename.pdf" target="_blank">📄 Paper</a>
-        <a href="ai-research/your-slides-filename.pdf" target="_blank" class="secondary">📊 Slides</a>
+        <a href="ai-research/AI_and_the_FDOI_full_02202026.pdf" target="_blank">📄 Paper</a>
+        <a href="ai-research/AI_and_the_FDOI_slides_02202026.pdf" target="_blank" class="secondary">📊 Slides</a>
       </div>
     </div>
 
@@ -655,6 +659,7 @@
 </body>
 
 </html>
+
 
 
 
