--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 <!-- AI-ASSISTED ORIGINAL RESEARCH & AI-GENERATED SUMMARIES-->
 <section id="ai-research">
   <div class="container">
-    <h2>AI-Assisted Research</h2>
+    <h2>AI-Assisted Original Research</h2>
     <p class="ai-intro">
       The projects below were conducted almost entirely by AI — specifically 
       <a href="https://www.anthropic.com/claude" target="_blank">Claude</a> (Anthropic) — 
@@ -659,6 +659,7 @@
 </body>
 
 </html>
+
 
 
 
